styles.css
@font-face {
  font-family: 'Urbanist';
  src: URL('./Urbanist.ttf') format('truetype');
}

@font-face {
  font-family: 'cocon';
  src: url('./CoconRegularFont.otf') format('opentype');
  font-weight: normal;
}

@font-face {
  font-family: 'productSans';
  src: url('./ProductSansRegular.ttf') format('truetype');
  /* font-weight: normal; */
}

body {
  margin: 0;
}

#logo {
  margin-left: 20px;
  margin-top: 20px;
}

#kittyInCircle {
  position: absolute;
  z-index: -1;
  top: 0;
  max-width: 100vw;
  left: 50%;
  transform: translate(-50%);
  margin-top: -100px;
  display: flex;
  justify-content: center;
}

#kitty {
  position: relative;
  width: 694px;
  z-index: 1;
  }

#dot {
  position: absolute;
  top: 80px;
  left: 30px;
  background-color: #f7d219;
  border-radius: 50%;
  width: 593px;
  height: 593px;
  left: auto;
}

.fact-box {
  max-width: 550px;
  display: flex;
  flex-direction: column;
  margin-right: auto;
  margin-top: 450px;
  margin-left: auto;
  backdrop-filter: blur(20px);
  background-color: rgba(255,255,255,0.3);
  border-radius: 10px;
}

#catFact {
  padding: 30px 30px 30px 30px;
  font-family: productSans;
  font-family: sans-serif;
  font-weight: 100;
  color: #454545;
  font-size: 20px;
  line-height: 29px;
  letter-spacing: 0.01em;
  text-align: justify;
}

 #logo  {
  font-size: 119px;
  text-align: center;
  font-family: Urbanist;
  font-weight: 800;
  margin-left: -65px;
  line-height: 0.69;
  letter-spacing: -8px;
  margin-top: -62px;
  text-shadow: 2px 2px 4px #000000;
  color: #ffd400;
  margin-bottom: 35px;
 }


#getDataButton {
font-size: 16px;
font-family: cocon;
font-weight: 200;
letter-spacing: 1px;
padding: 13px 20px 13px;
outline: 0;
border: 1px solid black;
cursor: pointer;
position: relative;
background-color: rgba(0, 0, 0, 0);
user-select: none;
-webkit-user-select: none;
touch-action: manipulation;
margin: 0 100px;
font-family: 'Urbanist';
font-size: 20px;
}

#getDataButton:after {
content: "";
background-color: #ffe54c;
width: 100%;
z-index: -1;
position: absolute;
height: 100%;
top: 7px;
left: 7px;
transition: 0.2s;

}

#getDataButton:hover:after {
top: 0px;
left: 0px;
background-color: #f8d300;
}

